# lib-ledrgb

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
cmake/: dependencies.cmake
examples/: CMakeLists.txt
examples/rpi4/ws281x/src/: main.cpp
examples/rpi5/ws281x/src/: main.cpp
inc/ledrgb/interfaces/rpi4/ws281x/: ledrgb.hpp
inc/ledrgb/interfaces/rpi5/ws281x/: ledrgb.hpp
rpi4/.github/workflows/: main.yml
rpi4/cmake/: dependencies.cmake
rpi4/examples/: CMakeLists.txt
rpi4/inc/ledrgb/: factory.hpp
rpi4/scripts/: setup.sh
rpi4/src/rpi4/ws281x/: ledrgb.cpp
rpi5/cmake/: dependencies.cmake
rpi5/inc/ledrgb/interfaces/: ledrgb.hpp
rpi5/scripts/: .setup.sh.swp  setup.sh
scripts/: setup.sh
scripts/rpi4/: setup.sh
src/rpi5/ws281x/: ledrgb.cpp
